--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <body>
     <div class="login-container">
         <!-- Replace "college logo.png" with your college logo file -->
-        <img src="college-logo.png" alt="College Logo">
+        <img src="college logo.png" alt="College Logo">
         <h2>Welcome to College Portal</h2>
         <form action="/submit-login" method="post">
             <input type="text" class="input-field" placeholder="Username" name="username" required>
